# LCL

./: ..gitignore.un~  .gitignore  CMakeLists.txt  brackets.cpp  check_normalize.cpp  main.cpp  normalize.cpp
lcl/: CMakeLists.txt  abstraction.cpp  abstraction.hpp  application.cpp  application.hpp  lambda.cpp  lambda.hpp  lambda_calculus.hpp  variable.cpp  variable.hpp
